# syckpt

./: .gitignore  README.md  __init__.py  autoencoder.ipynb  config.py  dataloader.py  hash.py  implementation.md  manager.py  pyproject.toml  release.py  setup.py  storage.py  tmp_autoencoder.py.py
.github/workflows/: publish.yml
docs/: 01_overview_and_cas.md  02_delta_compression.md  03_safetensors_and_flattening.md  04_lsh_and_hyperparameters.md  05_ddp_synchronization.md  06_resumption_dataloader.md  advanced_concepts.md  config_and_lsh.md  dataloader_and_resumption.md  file_formats.md  future.md  implementation.md  manager_and_ddp.md  state_aggregation.md  storage_and_cas.md  usage.md
syckpt/: __init__.py  dataloader.py  manager.py  state.py  storage.py
syckpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_async_manager.py  test_dataloader.py  test_layer_freezing.py
vae_experiment/.syckpt/objects/: 928fa8d9-0cb57d.json  928fa8d9-134db7.json  928fa8d9-a21ba7.json  928fa8d9.json  928fa8d9.safetensors  mega_b1d9204d.json
vae_experiment/.syckpt/refs/heads/: main
vae_experiment/.syckpt/refs/tags/: best_3
